Finished notes 9-6 DS 4300

--- a/DS4300/9-6-2018.md
+++ b/DS4300/9-6-2018.md
@@ -34,6 +34,22 @@ Bonus Topics (Time Permitting):
 * Capstone Project (30%)
 * 5 quizzes (20%)
 * Participation and Attendance (10%)
-	* Small research assignment/class presentation
+	* Small research assignment/class presentation (on a NoSQL database)
 	* Code reviews
 * No final
+
+### Purpose
+
+* Deeper understanding of data processing and storage
+* NoSQL programming skills, data models, use cases
+* Speak intelligently about different NoSQL implementations
+
+## NoSQL
+
+### Why learn NoSQL?
+
+* Relational databases have problems with scaling
+* Doesn't work well with unstructured data
+* Expand breadth of knowledge in data management
+* $$$
+
