--- a/DS4400/9-6-2018.md
+++ b/DS4400/9-6-2018.md
@@ -1,3 +1,59 @@
-### Note
+## Course Objectives
 
-There will be hand written notes for this class. Hand written notes will be attached as PDFS
+* Become familiar with ML tasks
+	* Supervised vs unsupervised
+	* Classification vs Regression vs Clustering
+
+* Study well known algorithms and apply
+
+## Grade breakdown
+
+* Hw - 20
+* Final Project - 25
+* Exams - 50
+* Class participation - 5
+
+---
+# Lesson 1
+
+ML is a subset of AI that uses real data to automate critical tasks
+
+## Supervised vs Unsupervised
+
+#### Supervised
+* Labeled data (output is known for training data)
+* Example: Handwritten digit recognition
+	* Input is pixel data
+	* Output is which digit was written
+	* Learning task - Find a function that takes the inputs and outputs correctly
+	* Test the function on data not used in training
+	* This is an example of classification
+* Example: Predict price of stock at future date
+	* Input is price today, history, month of  year, earnings, etc.
+	* This is a regression problem (output is a numerical value, not a class).
+
+
+#### Unsupervised
+* Unlabeled data (output is unknown for training data)
+* Example: Clustering images
+	* Puts together similar images
+	* Type of image not known beforehand.
+
+## Terminology
+
+* Hypothesis space H= {f: X -> Y}
+* Training data D = (xi, yi) ∈ X x Y
+* Features: xi ∈ X
+* Labels: xi ∈ Y
+
+
+## Bias Variance Tradeoff
+
+* High variance if there is overfit - model works very well on training data, but not as well on testing data
+	* Called high variance because model changes a lot if new data is introduced
+* High bias if there was underfit - model works poorly on both training and testing data
+* We want to get the sweetspot where we neither underfit nor overfit
+
+## Occam's Razor
+
+The simplest solution is usually the best one.
