--- a/DS4400/Study Guide ML 1 Midterm.ipynb
+++ b/DS4400/Study Guide ML 1 Midterm.ipynb
@@ -12,7 +12,11 @@
     "    * [Discrete Random Variables](#Discrete-Random-Variables)\n",
     "    * [Continuous Random Variables](#Continuous-Random-Variables)\n",
     "    * [Expectation and Variance](#Expectation-and-Variance)\n",
-    "    * [Conditional Probability and Bayes Theorem](#Conditional-Probability-and-Bayes-Theorem)"
+    "    * [Conditional Probability and Bayes Theorem](#Conditional-Probability-and-Bayes-Theorem)\n",
+    "    * [Vectors and Matrices](#Vectors-and-Matrices)\n",
+    "    * [Matrix Products](#Matrix-Products)\n",
+    "    * [Matrix Properties](#Matrix-Properties)\n",
+    "* [Linear Regression](#Linear-Regression)"
    ]
   },
   {
@@ -83,15 +87,40 @@
     "\n",
     "\n",
     "### $P(A|B) = \\frac{P(B|A)P(A)}{P(B)}$\n",
-    "\n"
+    "\n",
+    "#### Vectors and Matrices\n",
+    "\n",
+    "Vectors are ordered sets of numbers. Row vectors are of dimensions $n\\times 1$, column vectors are of dimensions $1\\times n$\n",
+    "\n",
+    "Norms are a measure of the \"length\" of a vector.\n",
+    "\n",
+    "* L1 norm: $||x||_{1} = \\sum_{n}^{i=1}|x_{i}|$\n",
+    "* L2 norm: $||x||_{2} = \\sqrt{\\sum_{n}^{i=1}x_{i}^{2}}$\n",
+    "\n",
+    "#### Matrix Products\n",
+    "\n",
+    "Vector dot (inner) product: let $r$ be a row vector, $c$ be a column vector $rc = \\sum_{n}^{i=1}r_{i}c_{i}$\n",
+    "\n",
+    "In order to multiply matrices, their dimensions must match up: $A \\in I\\!R^{m\\times n} B \\in I\\!R^{n\\times p}$\n",
+    "\n",
+    "#### Matrix Properties\n",
+    "\n",
+    "Associative: $(AB)C = A(BC)$\n",
+    "\n",
+    "Distributive: $A(B + C) = AB + AC$\n",
+    "\n",
+    "**NOT** Commutative: $AB \\neq BA$\n",
+    "\n",
+    "Transpose: Think of it as flipping a matrix. A row vector transpose is a column vector. $m\\times n$ &rarr; $n \\times m$"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Linear Regression\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
