Updates with LR, gradient descent.

--- a/DS4400/Study Guide ML 1 Midterm.ipynb
+++ b/DS4400/Study Guide ML 1 Midterm.ipynb
@@ -16,7 +16,16 @@
     "    * [Vectors and Matrices](#Vectors-and-Matrices)\n",
     "    * [Matrix Products](#Matrix-Products)\n",
     "    * [Matrix Properties](#Matrix-Properties)\n",
-    "* [Linear Regression](#Linear-Regression)"
+    "    * [Linear Independence](#Linear-Independence)\n",
+    "* [Linear Regression](#Linear-Regression)\n",
+    "    * [Simple LR](#Simple-LR)\n",
+    "    * [Terminology and Metrics](#Terminology and Metrics)\n",
+    "    * [Closed form solution to simple LR](#Closed-form-solution-to-simple-LR)\n",
+    "    * [Multiple LR](#Multiple-LR)\n",
+    "    * [Closed form solution to multiple LR](#Closed-form-solution-to-multiple-LR)\n",
+    "    * [Feature Standardization](#Feature-Standardization)\n",
+    "    * [Categorical Variables](#Categorical-Variables)\n",
+    "    * [Gradient Descent](#Gradient-Descent)"
    ]
   },
   {
@@ -111,7 +120,11 @@
     "\n",
     "**NOT** Commutative: $AB \\neq BA$\n",
     "\n",
-    "Transpose: Think of it as flipping a matrix. A row vector transpose is a column vector. $m\\times n$ &rarr; $n \\times m$"
+    "Transpose: Think of it as flipping a matrix. A row vector transpose is a column vector. $m\\times n$ &rarr; $n \\times m$\n",
+    "\n",
+    "#### Linear Independence\n",
+    "\n",
+    "A set of vectors are linearly independent if none of them can be written as a slinear combination of the others."
    ]
   },
   {
@@ -119,6 +132,77 @@
    "metadata": {},
    "source": [
     "### Linear Regression\n",
+    "\n",
+    "One of the most widely used ML techniques.\n",
+    "\n",
+    "#### Simple LR\n",
+    "\n",
+    "$h_{\\theta}(x) = \\theta_{0} + \\theta_{1}x$\n",
+    "\n",
+    "In this case, x is single dimensional. This is essentially finding the \"best fit line\".\n",
+    "\n",
+    "Cost function: $J(\\theta) = \\frac{1}{n}\\sum^{n}_{i=1}(h_{\\theta}(x^{(i)} - y^{(i)})^{2}$ - This is the Mean Square Error (MSE)\n",
+    "\n",
+    "#### Terminology and Metrics\n",
+    "\n",
+    "Residuals - Difference between predictions and actual values.\n",
+    "\n",
+    "$R^{(i)} = |y^{(i)} - \\hat{y}^{(i)}|\\text{, }\\hat{y}^{(i)} = h_{\\theta}(x^{(i)})$\n",
+    "\n",
+    "Residual Sum of Squares (RSS)\n",
+    "\n",
+    "$RSS = \\sum[y^{(i)} - \\hat{y}^{(i)}]^{2} $\n",
+    "\n",
+    "Residual Standard Error (RSE)\n",
+    "\n",
+    "$RSE = \\sqrt{\\frac{RSS}{n - 2}}$\n",
+    "\n",
+    "#### Closed form solution to simple LR\n",
+    "\n",
+    "$\\theta_{0} = \\bar{y} - \\theta_{1}\\bar{x}$\n",
+    "\n",
+    "$\\theta_{1} = \\frac{\\sum(x^{(i)} - \\bar{x})(y^{(i)} - \\bar{y})}{\\sum(x^{(i)} - \\bar{x})^{2}}$\n",
+    "\n",
+    "$\\bar{x},\\bar{y} = \\text{mean of x, y respectively}$\n",
+    "\n",
+    "This was found by taking the partial derivative of the loss function and setting it = 0.\n",
+    "\n",
+    "\n",
+    "#### Multiple LR\n",
+    "\n",
+    "$h_{\\theta}(x) = \\theta^{T}x$\n",
+    "\n",
+    "$J(\\theta) = \\frac{1}{n}\\sum^{n}_{i = 1}(h_{\\theta}(x^{(i)}) - y^{(i)})^{2}$\n",
+    "\n",
+    "#### Closed form solution to multiple LR\n",
+    "\n",
+    "$\\theta = (X^{T}X)^{-1}X^{T}y$\n",
+    "\n",
+    "$X$ is the matrix where each row is the number 1 followed by $x_{1}^{(i)}:x_{d}^{(i)}$\n",
+    "\n",
+    "#### Feature Standardization\n",
+    "\n",
+    "$\\mu_{j},s_{j} = \\text{mean, standard deviation of feature j}$\n",
+    "\n",
+    "$x_{j}^{(i)} \\leftarrow \\frac{x_{j}^{(i)} - \\mu_{j}}{s_{j}}$\n",
+    "\n",
+    "This rescales features to have 0 mean and 1 variance. This is good because different features can be on very different scales, making LR not work as well.\n",
+    "\n",
+    "#### Categorical Variables\n",
+    "\n",
+    "Example: State - has 50 values. To encode, we create 49 indicator variables.\n",
+    "\n",
+    "$x_{MA} = 1 \\text{ if State = MA and 0 otherwise}$\n",
+    "\n",
+    "This can make it so that data becomes too sparse.\n",
+    "\n",
+    "#### Gradient Descent\n",
+    "\n",
+    "Repeat the following:\n",
+    "\n",
+    "$\\theta_{j} \\leftarrow \\theta_{j} - \\alpha\\frac{\\partial}{\\partial\\theta_{j}}J(\\theta)$\n",
+    "\n",
+    "Intuition: The derivative indicates whether theta at this point is too high or too low as it indicates the slope at this point, and this will converge to the minimum.\n",
     "\n"
    ]
   }
