Updated up to cross validation.

--- a/DS4400/Study Guide ML 1 Midterm.ipynb
+++ b/DS4400/Study Guide ML 1 Midterm.ipynb
@@ -25,7 +25,12 @@
     "    * [Closed form solution to multiple LR](#Closed-form-solution-to-multiple-LR)\n",
     "    * [Feature Standardization](#Feature-Standardization)\n",
     "    * [Categorical Variables](#Categorical-Variables)\n",
-    "    * [Gradient Descent](#Gradient-Descent)"
+    "    * [Gradient Descent](#Gradient-Descent)\n",
+    "* [Perceptrons](#Perceptrons)\n",
+    "    * [Online Learning vs Batch Learning](#Online-Learning-vs-Batch-Learning)\n",
+    "    * [Perceptron Limitations and Improvements](#Perceptron-Limitations-and-Improvements)\n",
+    "* [KNN](#KNN)\n",
+    "* [Cross Validation](#Cross-Validation)"
    ]
   },
   {
@@ -204,6 +209,62 @@
     "\n",
     "Intuition: The derivative indicates whether theta at this point is too high or too low as it indicates the slope at this point, and this will converge to the minimum.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Perceptrons\n",
+    "\n",
+    "Classification algorithm where y=1 for the positive case, y=-1 for the negative case.\n",
+    "\n",
+    "$h(x) = sign(\\theta^{T}x)$\n",
+    "\n",
+    "Perceptron update rule:\n",
+    "\n",
+    "$\\theta_{j} \\leftarrow \\theta_{j} - \\frac{1}{2}(h(x^{(i)}) - y^{(i)})x_{j}^{(i)}$\n",
+    "\n",
+    "If $x^{(i)}$ is misclassified, do the following: $\\theta \\leftarrow \\theta + y^{(i)}x^{(i)}$\n",
+    "\n",
+    "#### Online Learning vs Batch Learning\n",
+    "\n",
+    "Online Learning - Model update is performed after every observation.\n",
+    "\n",
+    "Batch Learning - Model update is performed on entire training set. Updates are performed by computing the average update, and then updating theta with that.\n",
+    "\n",
+    "#### Perceptron Limitations and Improvements\n",
+    "\n",
+    "<p style=\"text-decoration: underline\">Limitations<p>\n",
+    "* Dependent on starting point\n",
+    "* Could take a long time to converge\n",
+    "* Can overfit data\n",
+    "* Many different decision boundaries are possible\n",
+    "\n",
+    "<p style=\"text-decoration: underline\">Improvements<p>\n",
+    "\n",
+    "* Use a combination of multiple Perceptrons\n",
+    "* Averaged Perceptron: Average intermediate perceptrons\n",
+    "\n",
+    "### KNN\n",
+    "\n",
+    "Find the K nearest samples in the training data to a test point, classify by majority vote.\n",
+    "\n",
+    "Typical metric to determine distance is euclidean distance: $\\sqrt{(\\sum^{k}_{i=1}(x_{i} - y_{i})^{2})}$\n",
+    "\n",
+    "Cons:\n",
+    "\n",
+    "* Does not learn any model\n",
+    "* Instance learner - needs all data at test time.\n",
+    "\n",
+    "k=1 &rarr; overfit\n",
+    "k=n &rarr; potential underfit, takes much longer to classify\n",
+    "\n",
+    "Choose k through cross validation.\n",
+    "\n",
+    "### Cross Validation\n",
+    "* Split training into training and validation data.\n",
+    "* Hold out validation data from training, and measure error with it. This way you test on data the algorithm hasn't seen before."
    ]
   }
  ],
