More study guide updates.

--- a/DS4400/Study Guide ML 1 Midterm.ipynb
+++ b/DS4400/Study Guide ML 1 Midterm.ipynb
@@ -19,18 +19,26 @@
     "    * [Linear Independence](#Linear-Independence)\n",
     "* [Linear Regression](#Linear-Regression)\n",
     "    * [Simple LR](#Simple-LR)\n",
-    "    * [Terminology and Metrics](#Terminology and Metrics)\n",
+    "    * [Terminology and Metrics](#Terminology-and-Metrics)\n",
     "    * [Closed form solution to simple LR](#Closed-form-solution-to-simple-LR)\n",
     "    * [Multiple LR](#Multiple-LR)\n",
     "    * [Closed form solution to multiple LR](#Closed-form-solution-to-multiple-LR)\n",
     "    * [Feature Standardization](#Feature-Standardization)\n",
     "    * [Categorical Variables](#Categorical-Variables)\n",
     "    * [Gradient Descent](#Gradient-Descent)\n",
+    "    * [GD for Linear Regression](#GD-for-Linear-Regression)\n",
     "* [Perceptrons](#Perceptrons)\n",
     "    * [Online Learning vs Batch Learning](#Online-Learning-vs-Batch-Learning)\n",
     "    * [Perceptron Limitations and Improvements](#Perceptron-Limitations-and-Improvements)\n",
     "* [KNN](#KNN)\n",
-    "* [Cross Validation](#Cross-Validation)"
+    "* [Cross Validation](#Cross-Validation)\n",
+    "    * [K-fold CV](#K-fold-CV)\n",
+    "* [Classification Metrics](#Classification-Metrics)\n",
+    "    * [Confusion Matrix](#Confusion-Matrix)\n",
+    "* [Logistic Regression](#Logistic-Regression)\n",
+    "    * [Maximum Likelihood Estimation](#Maximum-Likelihood-Estimation)\n",
+    "    * [Gradient Descent for Logistic Regression](#Gradient-Descent-for-Logistic-Regression)\n",
+    "* [LDA](#LDA)"
    ]
   },
   {
@@ -208,6 +216,10 @@
     "$\\theta_{j} \\leftarrow \\theta_{j} - \\alpha\\frac{\\partial}{\\partial\\theta_{j}}J(\\theta)$\n",
     "\n",
     "Intuition: The derivative indicates whether theta at this point is too high or too low as it indicates the slope at this point, and this will converge to the minimum.\n",
+    "\n",
+    "#### GD for Linear Regression\n",
+    "\n",
+    "$\\theta \\leftarrow \\theta - \\alpha \\sum^{n}_{i=1}(h_{\\theta}(x^{(i)}) - y^{(i)})x^{(i)}$\n",
     "\n"
    ]
   },
@@ -264,7 +276,92 @@
     "\n",
     "### Cross Validation\n",
     "* Split training into training and validation data.\n",
-    "* Hold out validation data from training, and measure error with it. This way you test on data the algorithm hasn't seen before."
+    "* Hold out validation data from training, and measure error with it. This way you test on data the algorithm hasn't seen before.\n",
+    "\n",
+    "#### K-fold CV\n",
+    "\n",
+    "Split data into k partitions of equal size, train model with same hyper perameters on each partition, and test on each partition. Each partition has a train and val set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classification Metrics\n",
+    "\n",
+    "$accuracy = \\frac{\\text{# correct preds}}{\\text{# total instances}}$\n",
+    "\n",
+    "$error = 1 - accuracy$\n",
+    "\n",
+    "#### Confusion Matrix\n",
+    "\n",
+    "<p style='text-align: center'>Predicted Class</p>\n",
+    "\n",
+    "|             |     | Yes | No |\n",
+    "|-------------|-----|-----|----|\n",
+    "|Actual Class | Yes | TP  | FN |\n",
+    "|             | No  | FP  | TN |\n",
+    "\n",
+    "$precision = \\frac{TP}{TP + FP}$ Precision is a measure of how few false positives we had.\n",
+    "\n",
+    "$recall = \\frac{TP}{TP + FN}$ Recall is a measure of how few false negatives we had.\n",
+    "\n",
+    "\n",
+    "### Logistic Regression\n",
+    "\n",
+    "$h_{\\theta}(x) = g(\\theta^{T}x)$\n",
+    "\n",
+    "$g(z) = \\frac{1}{1 + e^{-z}}$ This is known as the sigmoid function.\n",
+    "\n",
+    "The sigmoid function has the nice property of always being between 0 and 1. This allows logistic regression to be a probabalistic classifier, where the higher $h(x)$ is, the more confident it is.\n",
+    "\n",
+    "To make predictions we use a threshold. If $h(x)$ > threshold, we predict 1, else we predict 0.\n",
+    "\n",
+    "#### Maximum Likelihood Estimation\n",
+    "\n",
+    "What is the likelihood of training data for parameter $\\theta$?\n",
+    "\n",
+    "$Max_{\\theta}L(\\theta) = P[Y|X;\\theta]$\n",
+    "\n",
+    "Assumption: training points are independent\n",
+    "\n",
+    "$L(\\theta) = \\Pi^{n}_{i=1}P[y^{(i)}|x^{(i)};\\theta]$\n",
+    "\n",
+    "Max likelihood is equivalent to maximizing the log of the likelihood (log likelihood)\n",
+    "\n",
+    "$log L(\\theta) = \\sum^{n}_{i=1}log P[y^{(i)}|x^{(i)};\\theta]$\n",
+    "\n",
+    "Expand right side\n",
+    "\n",
+    "$\\theta_{MLE} = argmax_{\\theta}\\sum^{n}_{i=1}y^{(i)}log(h_{\\theta}(x^{(i)})) + (1 - y^{(i)}) log(1 - h_{\\theta}(x^{(i)}))$\n",
+    "\n",
+    "Make this negative for the cost function, as we want to minimize it.\n",
+    "\n",
+    "$J(\\theta) = -\\sum^{n}_{i=1}y^{(i)}log(h_{\\theta}(x^{(i)})) + (1 - y^{(i)}) log(1 - h_{\\theta}(x^{(i)}))$\n",
+    "\n",
+    "**intuition**: If y = 1, then the second term of cost = 0. If y = 0, the first term = 0.\n",
+    "\n",
+    "#### Gradient Descent for Logistic Regression\n",
+    "\n",
+    "$\\theta \\leftarrow \\theta - \\alpha \\sum^{n}_{i=1}(h_{\\theta}(x^{(i)}) - y^{(i)})x^{(i)}$\n",
+    "\n",
+    "Same as linear regression! Except h is different."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "|"
    ]
   }
  ],
