Updating final study guide.

--- a/DS4400/Study Guide ML 1 Midterm.ipynb
+++ b/DS4400/Study Guide ML 1 Midterm.ipynb
@@ -385,7 +385,7 @@
     "\n",
     "$J(\\theta) = -\\sum^{n}_{i=1}y^{(i)}log(h_{\\theta}(x^{(i)})) + (1 - y^{(i)}) log(1 - h_{\\theta}(x^{(i)}))$\n",
     "\n",
-    "**intuition**: If y = 1, then the second term of cost = 0. If y = 0, the first term = 0.\n",
+    "**intuition**: If y = 1, then the second term of cost = 0. If y = 0, the first term = 0. Also, log(number between 0 and 1) produces a negative number, thus the sum will be negative, so the whole cost will be positive.\n",
     "\n",
     "#### Gradient Descent for Logistic Regression\n",
     "\n",
@@ -405,6 +405,8 @@
     "Let $\\pi_{k} = P[Y=k]$ be the prior probability of class k, $f_{k}(x) = P[X=x|Y=k]$\n",
     "\n",
     "$Pr(Y=k | X=x) = \\frac{\\pi_{k}f_{k}(x)}{\\sum^{K}_{l=1}\\pi_{l}f_{l}(x)}$\n",
+    "\n",
+    "Bottom part is $P[X=x]$\n",
     "\n",
     "Assume $f_{k}(x)$ is gaussian.\n",
     "\n",
@@ -552,7 +554,8 @@
     "* Measures the \"purity\" of the node\n",
     "    * If node has most examples from one class, Gini index is low\n",
     "* What is the probability that a random node example is mix-classfied at that node?\n",
-    "    * $\\sum^{k}_{i=1}p_{i}(1 - p_{i})$"
+    "    * $\\sum^{k}_{i=1}p_{i}(1 - p_{i})$\n",
+    "* Variable importance of a feature measures decrease in Gini"
    ]
   }
  ],
