--- a/DS4400/Final-Studyguide.ipynb
+++ b/DS4400/Final-Studyguide.ipynb
@@ -8,7 +8,10 @@
     "\n",
     "* [Ensemble Learning](#Ensemble-Learning)\n",
     "* [SVM](#SVM)\n",
-    "* [Naive Bayes Classifier and Density Estimator](#Naive-Bayes-Classifier-and-Density-Estimator)"
+    "* [Naive Bayes Classifier and Density Estimator](#Naive-Bayes-Classifier-and-Density-Estimator)\n",
+    "* [Neural Networks](#Neural-Networks)\n",
+    "* [Convolutional Neural Networks](#Convolutional-Neural-Networks)\n",
+    "* [Backpropagation](#Backpropagation)"
    ]
   },
   {
@@ -172,7 +175,7 @@
     "\n",
     "#### Naive Bayes Classifier\n",
     "\n",
-    "Uses training data to estimate $P(X|Y) and P(Y)$, then uses Bayes' rule to infer $P(Y|X_{new})$\n",
+    "Uses training data to estimate $P(X|Y)$ and $P(Y)$, then uses Bayes' rule to infer $P(Y|X_{new})$\n",
     "\n",
     "Need to assume that each feature is independent.\n",
     "\n",
@@ -183,6 +186,130 @@
     "Essentially, add 1 to each count so that no probability can be 0 (only close to 0).\n",
     "\n",
     "Naive Bayes classifier gives predictions, not probabilities, as the denominator of Bayes' rule is ignored.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Neural Networks\n",
+    "\n",
+    "* Neural networks are made up of nodes connected by links.\n",
+    "* Each link has an associated weight.\n",
+    "* Each node has an input function (sum of inputs) and an activation function which produces an output.\n",
+    "\n",
+    "Neural networks use a \"bias unit\", which is set to 1. This is just like the bias unit in linear/logistic regression. A weight is then learned on that unit.\n",
+    "\n",
+    "<img src=\"images/neural-network-1.png\" style=\"width:400px\"/>\n",
+    "\n",
+    "#### Feed-Forward Networks\n",
+    "\n",
+    "Neurons from each layer connect to neurons in the next layer. This would be considered the \"basic\" neural network.\n",
+    "\n",
+    "To get a prediction from a feed forward network, inputs are fed to layer 0, then the weighted sums are applied on each node in the hidden layer. The hidden layer then applies the activation function, and this proceeds until the output layer is reached.\n",
+    "\n",
+    "<img src=\"images/neural-network-2.png\" style=\"width:400px\"/>\n",
+    "\n",
+    "#### Vectorization\n",
+    "\n",
+    "Vectorization can be used to speed up computations. Essentially, this uses linear algebra to compute many values at once. Example:\n",
+    "\n",
+    "$z^{[1]} = W^{[1]}x + b^{[1]}$ &rarr; produces the first hidden layer. $W^{[1]}$ is the weights for evey neuron in the hidden layer.\n",
+    "\n",
+    "#### Terminology\n",
+    "\n",
+    "* $a_{i}^{[j]}$ - Activation of unit i in hidden layer j\n",
+    "* g - activation function\n",
+    "* $W_{j}$ - Weight vector for hidden layer j. **NOTE** this seems incorrect, but is copied from slides. I believe it should be $W^{[j]}$\n",
+    "* $b_{j}$ - Bias vector for hidden layer j. **See note above**\n",
+    "\n",
+    "$W$ and $b$ are the trainable parameters for the neural network.\n",
+    "\n",
+    "\n",
+    "#### Softmax\n",
+    "\n",
+    "$\\sigma(z)_{j} = \\frac{e^{z_{j}}}{\\Sigma^{k}_{k=1}e^{z_{k}}}$\n",
+    "\n",
+    "Basically, creates an output for each class, and the highest output class is predicted."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convolutional Neural Networks\n",
+    "\n",
+    "Conv nets contain at least one convolutional layer.\n",
+    "\n",
+    "A convolution is an $n\\times m$ (but typically $n \\times n$) size filter, that is run over the input, computing dot products. Convolutions are followed by an activation function (typically ReLU)\n",
+    "\n",
+    "<img src=\"images/conv-net-1.png\" style=\"width:400px\"/>\n",
+    "\n",
+    "Note how above, a filter of size 5 applied to an image of size 32 produced a matrix of size 28. This is a general pattern. Output size = Input size - (conv size - 1), as long as stride = 1.\n",
+    "\n",
+    "#### Stride\n",
+    "\n",
+    "Stride is how far you move the convolution each time. Typically stride=1, but sometimes other strides are used.\n",
+    "\n",
+    "The general formula is: ((Input size - (conv size)) / stride) + 1. \n",
+    "\n",
+    "#### Padding\n",
+    "\n",
+    "Notice how this could result in a fractional output size! To fix this, padding is used. Essentially, you add a border of 0's to the input so that you get an integer output size.\n",
+    "\n",
+    "#### Max Pooling\n",
+    "\n",
+    "Max pooling is typically used after a convolutional layer.\n",
+    "\n",
+    "<img src=\"images/pool-1.png\" style=\"width:300px\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Backpropagation\n",
+    "\n",
+    "#### Parameter Initialization\n",
+    "\n",
+    "Initializing parameters with all 0s would make each unit learn the same thing. Instead, we randomly initialize.\n",
+    "\n",
+    "#### Computing Gradients\n",
+    "\n",
+    "<img src=\"images/backprop-1.png\" style=\"width:400px\"/>\n",
+    "\n",
+    "**Step 1**\n",
+    "\n",
+    "For output layer N, we have:\n",
+    "\n",
+    "You can think of $\\delta^{[N]}$ as the error at layer $N$\n",
+    "\n",
+    "Let's say our network has 4 layers. At layer 4, $\\delta^{[4]}=a^{[4]} - y$, as this is the difference between our prediction and the label.\n",
+    "\n",
+    "At the other layers we use the following formula:\n",
+    "\n",
+    "$\\delta^{[N]}=\\bigtriangledown_{z^{[N]}}L(\\hat{y},y)$\n",
+    "\n",
+    "\n",
+    "For sigmoid function, this would be computed with the chain rule:\n",
+    "\n",
+    "$\\bigtriangledown_{z^{[N]}}L(\\hat{y},y)=\\bigtriangledown_{\\hat{y}}L(\\hat{y},y)\\circ(g^{[N]})'(z^{[N]})$\n",
+    "\n",
+    "**Step 2**\n",
+    "\n",
+    "For $l= N-1, N-2,...,1$, we have:\n",
+    "\n",
+    "$\\delta^{[l]} = (W^{[l+1]T}\\delta^{[l+1]})\\circ g'(z^{[l]})$\n",
+    "\n",
+    "For the sigmoid function, $g'(z^{[l]})=a^{[l]} \\circ (1 - a^{[l]\n",
+    "\n",
+    "Note that the gradient from the previous layer is used to compute the gradient for the current layer (going backwards)\n",
+    "\n",
+    "**Step 3**\n",
+    "\n",
+    "Compute the gradients at layer $l$ as:\n",
+    "\n",
+    "$\\bigtriangledown_{W^{[l}}J(W,B) = \\delta^{[l]}a^{[l-1]T}$"
    ]
   }
  ],
