--- a/DS4400/Final-Studyguide.ipynb
+++ b/DS4400/Final-Studyguide.ipynb
@@ -288,12 +288,12 @@
     "\n",
     "At the other layers we use the following formula:\n",
     "\n",
-    "$\\delta^{[N]}=\\bigtriangledown_{z^{[N]}}L(\\hat{y},y)$\n",
+    "$\\delta^{[N]}=\\bigtriangledown_{z^{[N]}}L(\\hat{y},y)=\\frac{\\partial L(\\hat{y},y)}{\\partial z^{[N]}}$\n",
     "\n",
     "\n",
     "For sigmoid function, this would be computed with the chain rule:\n",
     "\n",
-    "$\\bigtriangledown_{z^{[N]}}L(\\hat{y},y)=\\bigtriangledown_{\\hat{y}}L(\\hat{y},y)\\circ(g^{[N]})'(z^{[N]})$\n",
+    "$\\bigtriangledown_{z^{[N]}}L(\\hat{y},y)=\\bigtriangledown_{\\hat{y}}L(\\hat{y},y)\\circ (g^{[N]})'(z^{[N]})$\n",
     "\n",
     "**Step 2**\n",
     "\n",
@@ -301,7 +301,7 @@
     "\n",
     "$\\delta^{[l]} = (W^{[l+1]T}\\delta^{[l+1]})\\circ g'(z^{[l]})$\n",
     "\n",
-    "For the sigmoid function, $g'(z^{[l]})=a^{[l]} \\circ (1 - a^{[l]\n",
+    "For the sigmoid function, $g'(z^{[l]})=a^{[l]} \\circ (1 - a^{[l]})=g(z^{[l]})*(1-g(z^{[l]}))$\n",
     "\n",
     "Note that the gradient from the previous layer is used to compute the gradient for the current layer (going backwards)\n",
     "\n",
@@ -309,7 +309,54 @@
     "\n",
     "Compute the gradients at layer $l$ as:\n",
     "\n",
-    "$\\bigtriangledown_{W^{[l}}J(W,B) = \\delta^{[l]}a^{[l-1]T}$"
+    "$\\bigtriangledown_{W^{[l]}}J(W,B) = \\delta^{[l]}a^{[l-1]T}$\n",
+    "\n",
+    "$\\bigtriangledown_{b^{[l]}}J(W,B) = \\delta^{[l]}a^{[l-1]T}$\n",
+    "\n",
+    "**Completing the updates**\n",
+    "\n",
+    "For final layer, the updates will look as follows (assuming 1 training example is used for update):\n",
+    "\n",
+    "$\\frac{\\partial L(\\hat{y},y)}{\\partial W^{[4]}} = (a^{[4]} - y)a^{[3]T}$\n",
+    "\n",
+    "$\\frac{\\partial L(\\hat{y},y)}{\\partial b^{[4]}} = (a^{[4]} - y)$\n",
+    "\n",
+    "$W^{[4]} = W^{[4]} - \\alpha \\frac{\\partial L(\\hat{y},y)}{\\partial W^{[4]}}$\n",
+    "\n",
+    "$b^{[4]} = b^{[4]} - \\alpha \\frac{\\partial L(\\hat{y},y)}{\\partial b^{[4]}}$\n",
+    "\n",
+    "Assuming use of sigmoid function, 3rd layer update will be as follows:\n",
+    "\n",
+    "\n",
+    "$\\frac{\\partial L(\\hat{y},y)}{\\partial W^{[3]}} = (a^{[3]} - y)W^{[3]}g(z^{[3]})(1-g(z^{[3]})a^{[2]T}$\n",
+    "\n",
+    "$\\frac{\\partial L(\\hat{y},y)}{\\partial b^{[3]}} = (a^{[3]} - y)W^{[3]}g(z^{[3]})(1-g(z^{[3]})$\n",
+    "\n",
+    "$W^{[3]} = W^{[3]} - \\alpha \\frac{\\partial L(\\hat{y},y)}{\\partial W^{[3]}}$\n",
+    "\n",
+    "$b^{[3]} = b^{[3]} - \\alpha \\frac{\\partial L(\\hat{y},y)}{\\partial b^{[3]}}$\n",
+    "\n",
+    "#### Stochastic Gradient Descent (SGD)\n",
+    "\n",
+    "Instead of doing updates using entire training set, you update one training example at a time. This is how it is done above.\n",
+    "\n",
+    "#### Mini-batch Gradient Descent\n",
+    "\n",
+    "Use a fixed batch size for updates. For all batches b with size B:\n",
+    "\n",
+    "$W^{[l]} = W^{[l]} - \\alpha \\Sigma^{B}_{i=1} \\frac{\\partial L(\\hat{y}^{(ib)},y^{(ib)})}{\\partial W^{[l]}}$\n",
+    "\n",
+    "$b^{[l]} = b^{[l]} - \\alpha \\Sigma^{B}_{i=1} \\frac{\\partial L(\\hat{y}^{(ib)},y^{(ib)})}{\\partial b^{[l]}}$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n"
    ]
   }
  ],
