--- a/DS4400/Final-Studyguide.ipynb
+++ b/DS4400/Final-Studyguide.ipynb
@@ -11,7 +11,11 @@
     "* [Naive Bayes Classifier and Density Estimator](#Naive-Bayes-Classifier-and-Density-Estimator)\n",
     "* [Neural Networks](#Neural-Networks)\n",
     "* [Convolutional Neural Networks](#Convolutional-Neural-Networks)\n",
-    "* [Backpropagation](#Backpropagation)"
+    "* [Backpropagation](#Backpropagation)\n",
+    "* [Recurrent Neural Networks \"RNN\"](#Recurrent-Neural-Networks-\"RNN\")\n",
+    "* [PCA](#PCA)\n",
+    "* [Autoencoders](#Autoencoders)\n",
+    "* [Clustering](#Clustering)"
    ]
   },
   {
@@ -346,17 +350,116 @@
     "\n",
     "$W^{[l]} = W^{[l]} - \\alpha \\Sigma^{B}_{i=1} \\frac{\\partial L(\\hat{y}^{(ib)},y^{(ib)})}{\\partial W^{[l]}}$\n",
     "\n",
-    "$b^{[l]} = b^{[l]} - \\alpha \\Sigma^{B}_{i=1} \\frac{\\partial L(\\hat{y}^{(ib)},y^{(ib)})}{\\partial b^{[l]}}$\n"
+    "$b^{[l]} = b^{[l]} - \\alpha \\Sigma^{B}_{i=1} \\frac{\\partial L(\\hat{y}^{(ib)},y^{(ib)})}{\\partial b^{[l]}}$\n",
+    "\n",
+    "\n",
+    "#### Regularization/Dropout\n",
+    "\n",
+    "L2 regularization can be applied to backprop. Dropout can also be applied. Dropout is esesntially giving each neuron a probability of being kept during training time. The thoery is that this makes it so the algorithm cannot be overly reliant on any one neuron. At test time, all neurons are always present.\n",
+    "\n",
+    "\n",
+    "<img src=\"images/dropout-1.png\" style=\"width:400px\"/>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "### Recurrent Neural Networks \"RNN\"\n",
     "\n",
+    "RNNs are typically used for procesing sequences. They can be used in many different configurations:\n",
+    "\n",
+    "<img src=\"images/rnn-1.png\" style=\"width:400px\"/>\n",
+    "\n",
+    "New state is determined by a function using weights on the old state, and a new input vector:\n",
+    "\n",
+    "$h_{t} = f_{W}(h_{t-1},x_{t})$\n",
+    "\n",
+    "<img src=\"images/rnn-2.png\" style=\"width:400px\"/>\n",
+    "\n",
+    "#### Long Short Term Memorty \"LSTM\"\n",
+    "\n",
+    "Has a gate function on top of recurrent weights to determine if the new state should be output or if the old state should be kept. Useful for passing on information a long way.\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PCA\n",
+    "\n",
+    "Orthogonal projection of data onto a lower dimensional linear space that:\n",
+    "\n",
+    "* maximizes variance of projected dta\n",
+    "* minimizes mean squared distance between data points and projections\n",
+    "\n",
+    "<img src=\"images/pca-1.png\" style=\"width:400px\"/>\n",
+    "\n",
+    "#### The Principal Components\n",
+    "\n",
+    "* Vectors originating from the center of mass\n",
+    "* 1st principal component points in direction of largest variance\n",
+    "* Each subsequent principal component is orthogonal to the previous ones and points in the direction of the largest variance of the residual subspace.\n",
+    "\n",
+    "#### Eigenvectors\n",
+    "\n",
+    "Let A be a matrix, and consider $Ax = \\lambda x$\n",
+    "\n",
+    "Eigenvalue of matrix: $\\lambda$\n",
+    "Eigenvector: x for which $Ax = \\lambda x$\n",
+    "\n",
+    "First principal component is the largest eigenvector of covariance matrix $\\Sigma = X^{T}X$\n",
+    "Second principal component is orthogonal fo first and second eigenvector of $\\Sigma$\n",
+    "\n",
+    "PCA can be used for dimensionality reduction. You do lose some information, but not all. \n",
+    "\n",
+    "<img src=\"images/pca-2.png\" style=\"width:500px\"/>\n",
+    "\n",
+    "Main drawback: Resulting projected dataset is not interpretable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Autoencoders\n",
+    "\n",
+    "Unsupervised approach for learning a lower-dimensional feature representation of unlabeled training data. Essentially, train a model to go from original data to lower feature representation back to original data.\n",
+    "\n",
+    "<img src=\"images/auto-1.png\" style=\"width:400px\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clustering\n",
+    "\n",
+    "Goal: Automatically segment data into groups of similar points without knowing labels.\n",
+    "\n",
+    "#### K means clustering\n",
+    "\n",
+    "* Fix a number of desired clusters k\n",
+    "* Select k cluster means at random\n",
+    "* Assign points to the closest cluster mean\n",
+    "* Re-compute cluster means based on new assignment\n",
+    "* Continue to do this until convergence.\n",
+    "\n",
+    "<img src=\"images/k-means-1.png\" style=\"width:400px\"/>\n",
+    "<img src=\"images/k-means-2.png\" style=\"width:400px\"/>\n",
+    "<img src=\"images/k-means-3.png\" style=\"width:400px\"/>\n",
+    "\n",
+    "##### Choosing the number of clusters\n",
+    "\n",
+    "Choosing k is a difficult problem. How to do so depends on the problem.\n",
+    "\n",
+    "#### Hierarchical clustering\n",
+    "\n",
+    "Build a binary tree of the data that successively merges similar groups of points\n",
+    "\n",
+    "Agglomerative clustering algorithm: Place each data point in its own singleton cluster, repeatedly merge the two closest clusters until a stopping condition is satisfied."
    ]
   }
  ],
